retrieveUnpackaged/objects/Line_Item__c.object
<CustomObject>
    <description>The Line Item object is a child object of the Form object. It is used for variable data entry on forms where many entries of the same data are required. For example if a form had many repeating fields for similar data entry, you would use the Line Item object instead of creating multiple versions of the similar fields on the Form object.</description>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Autopopulated from Purchase Card form in order to share the record</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Autopopulated from Purchase Card form in order to share the record</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLPs__c</fullName>
        <defaultValue>1</defaultValue>
        <label>CLPs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName +&quot; &quot;+ Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>for testing only</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Itemsory333</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <label>Course Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PCard Agency Supplemental Training</fullName>
                </value>
                <value>
                    <fullName>PaymentNet (PNET)</fullName>
                </value>
                <value>
                    <fullName>GSA SmartPay Purchase Card Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_User_View__c</fullName>
        <formula>IF ( Employee__r.User__r.Id =  $User.Id, TRUE, FALSE)</formula>
        <label>Current User View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>TCTO Request</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <formula>IF(ISBLANK(Date__c),
&quot;[This field will populate after save.]&quot;,
CASE( MOD( Date__c - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, 
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display1__c</fullName>
        <label>Display1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display2__c</fullName>
        <label>Display2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display3__c</fullName>
        <label>Display3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <description>Line Item Test</description>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Price__c</fullName>
        <description>Line Item Test</description>
        <label>Item Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-Line</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Location__c</fullName>
        <label>Other Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Line Item Test</description>
        <label>Related Form</label>
        <referenceTo>Forms__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Itemsxx3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Course_Title__c</columns>
        <columns>Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>stevens</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Purchase_Card_Training</fullName>
        <columns>NAME</columns>
        <columns>Course_Title__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Employee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_User_View__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Line_Item__c.Training</value>
        </filters>
        <label>My Purchase Card Training</label>
    </listViews>
    <listViews>
        <fullName>purchase_card_training</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Course_Title__c</columns>
        <columns>Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee__c</field>
            <operation>equals</operation>
            <value>Dianne Lyles</value>
        </filters>
        <label>purchase card training</label>
    </listViews>
    <nameField>
        <displayFormat>LI-{000000}</displayFormat>
        <label>Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <recordTypes>
        <fullName>Form_EPA_100_Line_Item</fullName>
        <active>false</active>
        <description>Name, Item_Name__c, Item_Description__c, Item_Price__c, Date__c</description>
        <label>Form - EPA-100 Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Form_Sample_Record_Type_Line_Item</fullName>
        <active>true</active>
        <description>For Testing</description>
        <label>Form - Sample Record Type Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sample_Line_Item_Record_Type</fullName>
        <active>true</active>
        <description>For Testing V3</description>
        <label>Sample Line Item Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <label>Training</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ShareTrainingRecord__c</fullName>
        <label>ShareTrainingRecord</label>
    </sharingReasons>
</CustomObject>